--- a/setup.cfg
+++ b/setup.cfg
@@ -1,51 +1,70 @@
-[build_sphinx]
-source-dir = docs
-build-dir = docs/_build
-all_files = 1
+[metadata]
+name = caldp
+author = STScI
+author_email = helpdesk@stsci.edu
+license = BSD 3-Clause
+license_file = licenses/LICENSE.rst
+url = http://stsci.edu
+description = Calibration data pipeline for Hubble Space Telescope Observations
+long_description = file: README.rst
+long_description_content_type = text/x-rst
+edit_on_github = False
+github_project = spacetelescope/caldp
 
-[build_docs]
-source-dir = docs
-build-dir = docs/_build
-all_files = 1
+[options]
+zip_safe = False
+packages = find:
+python_requires = >=3.6
+setup_requires = setuptools_scm
+install_requires =
+    astropy
 
-[upload_docs]
-upload-dir = docs/_build/html
-show-response = 1
+
+[options.extras_require]
+test =
+    pytest-astropy
+docs =
+    sphinx-astropy
+
+[options.package_data]
+caldp = data/*
 
 [tool:pytest]
-minversion = 3.0
-norecursedirs = build docs/_build
+testpaths = "caldp" "docs"
+astropy_header = true
 doctest_plus = enabled
-addopts = -p no:warnings
+text_file_format = rst
+addopts = --doctest-rst
 
-[ah_bootstrap]
-auto_use = True
+[coverage:run]
+omit =
+    caldp/_astropy_init*
+    caldp/conftest.py
+    caldp/*setup_package*
+    caldp/tests/*
+    caldp/*/tests/*
+    caldp/extern/*
+    caldp/version*
+    */caldp/_astropy_init*
+    */caldp/conftest.py
+    */caldp/*setup_package*
+    */caldp/tests/*
+    */caldp/*/tests/*
+    */caldp/extern/*
+    */caldp/version*
 
-[flake8]
-exclude = extern,sphinx,*parsetab.py
-
-[pycodestyle]
-exclude = extern,sphinx,*parsetab.py
-
-[metadata]
-package_name = hstdp
-description = The DMS environment for HST calibration software
-long_description = This includes a framework for installing and testing the software that is used to calibrate data from the Hubble Space Telescope 
-author = Space Telescope Science Institute
-author_email = help@stsci.edu
-license = Aura
-url = http://stsci.edu
-edit_on_github = True
-github_project = spacetelescope/stsci-package-template
-# install_requires should be formatted as a comma-separated list, e.g.:
-# install_requires = astropy, scipy, matplotlib
-install_requires = astropy
-# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
-version = 0.0.dev
-# Note: you will also need to change this in your package's __init__.py
-minimum_python_version = 3.5
-
-[entry_points]
-
-# astropy-package-template-example = packagename.example_mod:main
-
+[coverage:report]
+exclude_lines =
+    # Have to re-enable the standard pragma
+    pragma: no cover
+    # Don't complain about packages we have installed
+    except ImportError
+    # Don't complain if tests don't hit assertions
+    raise AssertionError
+    raise NotImplementedError
+    # Don't complain about script hooks
+    def main\(.*\):
+    # Ignore branches that don't pertain to this version of Python
+    pragma: py{ignore_python_version}
+    # Don't complain about IPython completion helper
+    def _ipython_key_completions_
