added black to the codestyle tests

--- a/tox.ini
+++ b/tox.ini
@@ -84,6 +84,9 @@ commands =
 [testenv:codestyle]
 skip_install = true
 changedir = .
-description = check code style, e.g. with flake8
+description = check code style, e.g. with flake8, black
 deps = flake8
-commands = flake8 caldp --count --max-line-length=120
+whitelist_externals = black
+commands = 
+    flake8 caldp --count --max-line-length=120
+    black --check caldp
