fixing tox.ini for black as a dep

--- a/tox.ini
+++ b/tox.ini
@@ -85,8 +85,9 @@ commands =
 skip_install = true
 changedir = .
 description = check code style, e.g. with flake8, black
-deps = flake8
-whitelist_externals = black
+deps = 
+    flake8 
+    black
 commands = 
     flake8 caldp --count --max-line-length=120
     black --check caldp
