--- a/tox.ini
+++ b/tox.ini
@@ -85,5 +85,9 @@ commands =
 skip_install = true
 changedir = .
 description = check code style, e.g. with flake8
-deps = flake8
-commands = flake8 caldp --count --max-line-length=120
+deps = 
+    flake8
+    black
+commands = 
+    flake8 caldp --count --max-line-length=120
+    black --check caldp
