--- a/setup.cfg
+++ b/setup.cfg
@@ -14,10 +14,11 @@ github_project = spacetelescope/caldp
 [options]
 zip_safe = False
 packages = find:
-python_requires = >=3.6
+python_requires = >=3.7
 setup_requires = setuptools_scm
 install_requires =
     astropy
+    boto3
 
 
 [options.extras_require]
@@ -25,6 +26,13 @@ test =
     pytest-astropy
 docs =
     sphinx-astropy
+dev =
+    black >=19.3b0, <20
+    flake8
+    pytest >=5.0.1, <6
+    pytest-cov >= 2.7.1, <3
+    tox >=3.13.2, <4
+    bandit
 
 [options.package_data]
 caldp = data/*
@@ -68,3 +76,8 @@ exclude_lines =
     pragma: py{ignore_python_version}
     # Don't complain about IPython completion helper
     def _ipython_key_completions_
+
+[flake8]
+ignore = E501, E203, W503
+exclude = .git, __pycache__, build, dist, eggs, *.egg
+
