Untested baseline "latest" and "stable" tox environments

--- a/tox.ini
+++ b/tox.ini
@@ -1,93 +1,68 @@
 [tox]
 envlist =
-    py{36,37,38}-test{,-alldeps,-devdeps}{,-cov}
-    py{36,37,38}-test-numpy{116,117,118}
-    py{36,37,38}-test-astropy{30,40,lts}
-    build_docs
-    linkcheck
-    codestyle
+    stable
+    latest
+    black
+    flake8
+    coverage
+    bandit
 requires =
     setuptools >= 30.3.0
     pip >= 19.3.1
 isolated_build = true
 
-[testenv]
-
-# Pass through the following environment variables which may be needed for the CI
+[testenv:stable]
 passenv = HOME WINDIR LC_ALL LC_CTYPE CC CI TRAVIS DISPLAY
-
-# Run the tests in a temporary directory to make sure that we don't import
-# this package from the source tree
 changedir = .tmp/{envname}
-
-# tox environments are constructed with so-called 'factors' (or terms)
-# separated by hyphens, e.g. test-devdeps-cov. Lines below starting with factor:
-# will only take effect if that factor is included in the environment name. To
-# see a list of example environments that can be run, along with a description,
-# run:
-#
-#     tox -l -v
-#
-description =
-    run tests
-    alldeps: with all optional dependencies
-    devdeps: with the latest developer version of key dependencies
-    oldestdeps: with the oldest supported version of key dependencies
-    cov: and test coverage
-    numpy116: with numpy 1.16.*
-    numpy117: with numpy 1.17.*
-    numpy118: with numpy 1.18.*
-    astropy30: with astropy 3.0.*
-    astropy40: with astropy 4.0.*
-    astropylts: with the latest astropy LTS
-
-# The following provides some specific pinnings for key packages
-deps =
-
-    numpy116: numpy==1.16.*
-    numpy117: numpy==1.17.*
-    numpy118: numpy==1.18.*
-
-    astropy30: astropy==3.0.*
-    astropy40: astropy==4.0.*
-    astropylts: astropy==4.0.*
-
-    devdeps: git+https://github.com/numpy/numpy.git#egg=numpy
-    devdeps: git+https://github.com/astropy/astropy.git#egg=astropy
-
-# The following indicates which extras_require from setup.cfg will be installed
-extras =
-    test
-    alldeps: all
-
+extras = dev
+whitelist_externals = pytest
 commands =
-    pip freeze
-    # !cov: pytest --pyargs caldp {toxinidir}/docs {posargs}
-    # cov: pytest --pyargs caldp {toxinidir}/docs --cov caldp --cov-config={toxinidir}/setup.cfg {posargs}
+    curl -O https://ssb.stsci.edu/releases/caldp/stable/latest-linux.yml
+    conda env create -n caldp_stable --file latest-linux.yml
+    source activate caldp_stable
+    pytest --cov=caldp --cov-report=term-missing
 
-[testenv:build_docs]
-changedir = docs
-description = invoke sphinx-build to build the HTML docs
-extras = docs
+
+[testenv:latest]
+passenv = HOME WINDIR LC_ALL LC_CTYPE CC CI TRAVIS DISPLAY
+changedir = .tmp/{envname}
+extras = dev
+whitelist_externals = pytest
 commands =
-    pip freeze
-    sphinx-build -W -b html . _build/html
+    curl -O https://ssb.stsci.edu/releases/caldp/latest/latest-linux.yml
+    conda env create -n caldp_latest --file latest-linux.yml
+    source activate caldp_latest
+    pytest --cov=caldp --cov-report=term-missing
 
-[testenv:linkcheck]
-changedir = docs
-description = check the links in the HTML docs
-extras = docs
+[testenv:black]
+basepython = python3.7
+extras = dev
+whitelist_externals = black
+commands=
+    black --check caldp caldp/tests
+
+[testenv:flake8]
+basepython = python3.7
+extras = dev
+whitelist_externals = flake8
 commands =
-    pip freeze
-    sphinx-build -W -b linkcheck . _build/html
+    flake8 --count caldp caldp/tests
 
-[testenv:codestyle]
-skip_install = true
-changedir = .
-description = check code style, e.g. with flake8
-deps = 
-    flake8
-    black
-commands = 
-    flake8 caldp --count --max-line-length=120
-    black --check caldp
+[testenv:coverage]
+passenv = HOME WINDIR LC_ALL LC_CTYPE CC CI TRAVIS DISPLAY
+changedir = .tmp/{envname}
+extras = dev
+whitelist_externals = pytest
+commands =
+    curl -O https://ssb.stsci.edu/releases/caldp/stable/latest-linux.yml
+    conda env create -n caldp_stable --file latest-linux.yml
+    source activate caldp_stable
+    pytest --cov=caldp --cov-report=term-missing --cov-fail-under 95
+
+[testenv:bandit]
+basepython = python3.7
+extras = dev
+whitelist_externals = bandit
+commands =
+    bandit -r caldp
+
