Added basic miniconda install where required

--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,8 @@ changedir = .tmp/{envname}
 extras = dev
 whitelist_externals = pytest
 commands =
+    curl -O https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
+    sh Miniconda3-latest-Linux-x86_64.sh
     curl -O https://ssb.stsci.edu/releases/caldp/stable/latest-linux.yml
     conda env create -n caldp_stable --file latest-linux.yml
     source activate caldp_stable
@@ -29,6 +31,8 @@ changedir = .tmp/{envname}
 extras = dev
 whitelist_externals = pytest
 commands =
+    curl -O https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
+    sh Miniconda3-latest-Linux-x86_64.sh
     curl -O https://ssb.stsci.edu/releases/caldp/latest/latest-linux.yml
     conda env create -n caldp_latest --file latest-linux.yml
     source activate caldp_latest
@@ -54,6 +58,8 @@ changedir = .tmp/{envname}
 extras = dev
 whitelist_externals = pytest
 commands =
+    curl -O https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
+    sh Miniconda3-latest-Linux-x86_64.sh
     curl -O https://ssb.stsci.edu/releases/caldp/stable/latest-linux.yml
     conda env create -n caldp_stable --file latest-linux.yml
     source activate caldp_stable
