More conda env setup.

--- a/tox.ini
+++ b/tox.ini
@@ -19,11 +19,11 @@ whitelist_externals = pytest
 commands =
     curl -O https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
     sh Miniconda3-latest-Linux-x86_64.sh -b
+    source $HOME/miniconda3/etc/profile.d/conda.sh
     curl -O https://ssb.stsci.edu/releases/caldp/stable/latest-linux.yml
     conda env create -n caldp_stable --file latest-linux.yml
-    source activate caldp_stable
-    pytest --cov=caldp --cov-report=term-missing
-
+    conda activate caldp_stable
+    pytest caldp
 
 [testenv:latest]
 passenv = HOME WINDIR LC_ALL LC_CTYPE CC CI TRAVIS DISPLAY
@@ -33,10 +33,11 @@ whitelist_externals = pytest
 commands =
     curl -O https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
     sh Miniconda3-latest-Linux-x86_64.sh -b
+    source $HOME/miniconda3/etc/profile.d/conda.sh
     curl -O https://ssb.stsci.edu/releases/caldp/latest/latest-linux.yml
     conda env create -n caldp_latest --file latest-linux.yml
-    source activate caldp_latest
-    pytest --cov=caldp --cov-report=term-missing
+    conda activate caldp_latest
+    pytest caldp
 
 [testenv:black]
 basepython = python3.7
@@ -60,9 +61,10 @@ whitelist_externals = pytest
 commands =
     curl -O https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
     sh Miniconda3-latest-Linux-x86_64.sh -b
+    source $HOME/miniconda3/etc/profile.d/conda.sh
     curl -O https://ssb.stsci.edu/releases/caldp/stable/latest-linux.yml
     conda env create -n caldp_stable --file latest-linux.yml
-    source activate caldp_stable
+    conda activate caldp_stable
     pytest --cov=caldp --cov-report=term-missing --cov-fail-under 95
 
 [testenv:bandit]
