Attempt to build conda + cal environment in tox.

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,6 @@
 [tox]
 envlist =
     stable
-    latest
     black
     flake8
     coverage
@@ -11,32 +10,28 @@ requires =
     pip >= 19.3.1
 isolated_build = true
 
-[testenv:stable]
+[testenv_conda]
 passenv = HOME WINDIR LC_ALL LC_CTYPE CC CI TRAVIS DISPLAY
 changedir = .tmp/{envname}
 extras = dev
-whitelist_externals = pytest
+whitelist_externals = curl bash source hash conda pip caldp-install-fits-cut pytest
 commands =
     curl -O https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
-    sh Miniconda3-latest-Linux-x86_64.sh -b
-    source $HOME/miniconda3/etc/profile.d/conda.sh
-    curl -O https://ssb.stsci.edu/releases/caldp/stable/latest-linux.yml
-    conda env create -n caldp_stable --file latest-linux.yml
-    conda activate caldp_stable
-    pytest caldp
+    bash Miniconda3-latest-Linux-x86_64.sh -b -p $HOME/miniconda
+    source "$HOME/miniconda/etc/profile.d/conda.sh"
+    hash -r
+    conda config --set always_yes yes --set changeps1 no
+    conda update -q conda
+    conda info -a
 
-[testenv:latest]
-passenv = HOME WINDIR LC_ALL LC_CTYPE CC CI TRAVIS DISPLAY
-changedir = .tmp/{envname}
-extras = dev
-whitelist_externals = pytest
+[testenv_conda:stable]
 commands =
-    curl -O https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
-    sh Miniconda3-latest-Linux-x86_64.sh -b
-    source $HOME/miniconda3/etc/profile.d/conda.sh
-    curl -O https://ssb.stsci.edu/releases/caldp/latest/latest-linux.yml
-    conda env create -n caldp_latest --file latest-linux.yml
-    conda activate caldp_latest
+    curl -O https://ssb.stsci.edu/releases/caldp/stable/latest-linux.yml
+    conda env create -q -n caldp_stable --file latest-linux.yml
+    conda activate caldp_stable
+    pip install .[test]
+    caldp-install-fitscut
+    source caldp-config-offsite
     pytest caldp
 
 [testenv:black]
@@ -59,13 +54,6 @@ changedir = .tmp/{envname}
 extras = dev
 whitelist_externals = pytest
 commands =
-    curl -O https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
-    sh Miniconda3-latest-Linux-x86_64.sh -b
-    source $HOME/miniconda3/etc/profile.d/conda.sh
-    curl -O https://ssb.stsci.edu/releases/caldp/stable/latest-linux.yml
-    conda env create -n caldp_stable --file latest-linux.yml
-    conda activate caldp_stable
-    pytest --cov=caldp --cov-report=term-missing --cov-fail-under 95
 
 [testenv:bandit]
 basepython = python3.7
