More conda test config,  added tox-conda.

--- a/tox.ini
+++ b/tox.ini
@@ -8,27 +8,28 @@ envlist =
 requires =
     setuptools >= 30.3.0
     pip >= 19.3.1
+    tox-conda
+conda_deps =
+    stable: https://ssb.stsci.edu/releases/caldp/stable/latest-linux.yml
+    coverage: https://ssb.stsci.edu/releases/caldp/stable/latest-linux.yml
+    latest: https://ssb.stsci.edu/releases/caldp/latest/latest-linux.yml
 isolated_build = true
 
-[testenv_conda]
+[testenv]
 passenv = HOME WINDIR LC_ALL LC_CTYPE CC CI TRAVIS DISPLAY
 changedir = .tmp/{envname}
 extras = dev
-whitelist_externals = curl bash source hash conda pip caldp-install-fits-cut pytest
-commands =
-    curl -O https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
-    bash Miniconda3-latest-Linux-x86_64.sh -b -p $HOME/miniconda
-    source "$HOME/miniconda/etc/profile.d/conda.sh"
-    hash -r
-    conda config --set always_yes yes --set changeps1 no
-    conda update -q conda
-    conda info -a
+whitelist_externals = pytest curl bash source hash conda pip caldp-install-fits-cut caldp-config-offsite
 
-[testenv_conda:stable]
+[testenv:stable]
 commands =
-    curl -O https://ssb.stsci.edu/releases/caldp/stable/latest-linux.yml
-    conda env create -q -n caldp_stable --file latest-linux.yml
-    conda activate caldp_stable
+    pip install .[test]
+    caldp-install-fitscut
+    source caldp-config-offsite
+    pytest caldp
+
+[testenv:latest]
+commands =
     pip install .[test]
     caldp-install-fitscut
     source caldp-config-offsite
@@ -54,6 +55,10 @@ changedir = .tmp/{envname}
 extras = dev
 whitelist_externals = pytest
 commands =
+    pip install .[test]
+    caldp-install-fitscut
+    source caldp-config-offsite
+    pytest caldp  --cov-report=term-missing --cov-fail-under 95
 
 [testenv:bandit]
 basepython = python3.7
