Added conda_channels to tox

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,8 @@ conda_deps =
     stable: https://ssb.stsci.edu/releases/caldp/stable/latest-linux.yml
     coverage: https://ssb.stsci.edu/releases/caldp/stable/latest-linux.yml
     latest: https://ssb.stsci.edu/releases/caldp/latest/latest-linux.yml
+conda_channels =
+    conda-forge
 isolated_build = true
 
 [testenv]
