Switched conda  install approaches back to pure tox.

--- a/tox.ini
+++ b/tox.ini
@@ -8,34 +8,38 @@ envlist =
 requires =
     setuptools >= 30.3.0
     pip >= 19.3.1
-    tox-conda
-conda_deps =
-    stable: https://ssb.stsci.edu/releases/caldp/stable/latest-linux.yml
-    coverage: https://ssb.stsci.edu/releases/caldp/stable/latest-linux.yml
-    latest: https://ssb.stsci.edu/releases/caldp/latest/latest-linux.yml
-conda_channels =
-    conda-forge
 isolated_build = true
 
 [testenv]
 passenv = HOME WINDIR LC_ALL LC_CTYPE CC CI TRAVIS DISPLAY
 changedir = .tmp/{envname}
 extras = dev
-whitelist_externals = pytest curl bash source hash conda pip caldp-install-fits-cut caldp-config-offsite
+whitelist_externals = curl bash source hash conda pip caldp-install-fits-cut pytest
+commands_pre =
+    curl -O https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
+    bash Miniconda3-latest-Linux-x86_64.sh -b -p $HOME/miniconda
+    source "$HOME/miniconda/etc/profile.d/conda.sh"
+    hash -r
+    conda config --set always_yes yes --set changeps1 no
+    conda update -q conda
+    conda info -a
+commands_post =
+    pip install .[test]
+    caldp-install-fitscut
+    source caldp-config-offsite
+    pytest caldp
 
 [testenv:stable]
 commands =
-    pip install .[test]
-    caldp-install-fitscut
-    source caldp-config-offsite
-    pytest caldp
+    curl -O https://ssb.stsci.edu/releases/caldp/stable/latest-linux.yml
+    conda env create -q -n caldp_stable --file latest-linux.yml
+    conda activate caldp_stable
 
 [testenv:latest]
 commands =
-    pip install .[test]
-    caldp-install-fitscut
-    source caldp-config-offsite
-    pytest caldp
+    curl -O https://ssb.stsci.edu/releases/caldp/latest/latest-linux.yml
+    conda env create -q -n caldp_stable --file latest-linux.yml
+    conda activate caldp_stable
 
 [testenv:black]
 basepython = python3.7
@@ -43,6 +47,8 @@ extras = dev
 whitelist_externals = black
 commands=
     black --check caldp caldp/tests
+commands_pre =
+commands_post =
 
 [testenv:flake8]
 basepython = python3.7
@@ -50,17 +56,8 @@ extras = dev
 whitelist_externals = flake8
 commands =
     flake8 --count caldp caldp/tests
-
-[testenv:coverage]
-passenv = HOME WINDIR LC_ALL LC_CTYPE CC CI TRAVIS DISPLAY
-changedir = .tmp/{envname}
-extras = dev
-whitelist_externals = pytest
-commands =
-    pip install .[test]
-    caldp-install-fitscut
-    source caldp-config-offsite
-    pytest caldp  --cov-report=term-missing --cov-fail-under 95
+commands_pre =
+commands_post =
 
 [testenv:bandit]
 basepython = python3.7
@@ -68,4 +65,21 @@ extras = dev
 whitelist_externals = bandit
 commands =
     bandit -r caldp
+commands_pre =
+commands_post =
+
+[testenv:coverage]
+passenv = HOME WINDIR LC_ALL LC_CTYPE CC CI TRAVIS DISPLAY
+changedir = .tmp/{envname}
+extras = dev
+whitelist_externals = pytest
+commands =
+    curl -O https://ssb.stsci.edu/releases/caldp/stable/latest-linux.yml
+    conda env create -q -n caldp_stable --file latest-linux.yml
+    conda activate caldp_stable
+commands_post =
+    pip install .[test]
+    caldp-install-fitscut
+    source caldp-config-offsite
+    pytest caldp --cov=caldp --cov-fail-under 95 --cov-report=term-missing
 
