Switch to .travis conda env setup.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    stable
+    test
     black
     flake8
     coverage
@@ -13,69 +13,32 @@ isolated_build = true
 [testenv]
 passenv = HOME WINDIR LC_ALL LC_CTYPE CC CI TRAVIS DISPLAY
 changedir = .tmp/{envname}
-extras = dev
-whitelist_externals = curl bash source hash conda pip caldp-install-fits-cut pytest
-commands_pre =
-    curl -O https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
-    bash Miniconda3-latest-Linux-x86_64.sh -b -p $HOME/miniconda
-    source "$HOME/miniconda/etc/profile.d/conda.sh"
-    hash -r
-    conda config --set always_yes yes --set changeps1 no
-    conda update -q conda
-    conda info -a
-commands_post =
-    pip install .[test]
-    caldp-install-fitscut
-    source caldp-config-offsite
+
+[testenv:coverage]
+whitelist_externals = pytest
+commands =
+    pytest caldp --cov=caldp --cov-fail-under 95 --cov-report=term-missing
+
+[testenv:test]
+whitelist_externals = pytest
+commands =
     pytest caldp
-
-[testenv:stable]
-commands =
-    curl -O https://ssb.stsci.edu/releases/caldp/stable/latest-linux.yml
-    conda env create -q -n caldp_stable --file latest-linux.yml
-    conda activate caldp_stable
-
-[testenv:latest]
-commands =
-    curl -O https://ssb.stsci.edu/releases/caldp/latest/latest-linux.yml
-    conda env create -q -n caldp_stable --file latest-linux.yml
-    conda activate caldp_stable
 
 [testenv:black]
 basepython = python3.7
-extras = dev
 whitelist_externals = black
 commands=
     black --check caldp caldp/tests
-commands_pre =
-commands_post =
 
 [testenv:flake8]
 basepython = python3.7
-extras = dev
 whitelist_externals = flake8
 commands =
     flake8 --count caldp caldp/tests
-commands_pre =
-commands_post =
 
 [testenv:bandit]
 basepython = python3.7
-extras = dev
 whitelist_externals = bandit
 commands =
     bandit -r caldp
-commands_pre =
-commands_post =
-
-[testenv:coverage]
-commands =
-    curl -O https://ssb.stsci.edu/releases/caldp/stable/latest-linux.yml
-    conda env create -q -n caldp_stable --file latest-linux.yml
-    conda activate caldp_stable
-commands_post =
-    pip install .[test]
-    caldp-install-fitscut
-    source caldp-config-offsite
-    pytest caldp --cov=caldp --cov-fail-under 95 --cov-report=term-missing
 
