--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,22 @@ language: python
 python: 3.7
 matrix:
     include:
-        - env: TOXENV=stable
-        - env: TOXENV=latest
-        - env: TOXENV=black
-        - env: TOXENV=flake8
-        - env: TOXENV=coverage
-        - env: TOXENV=bandit
+        - env: HSTCAL=stable
+        - env: HSTCAL=latest
+
 install:
-    - pip install tox
+    - curl -O https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
+    - bash Miniconda3-latest-Linux-x86_64.sh -b -p $HOME/miniconda
+    - source "$HOME/miniconda/etc/profile.d/conda.sh"
+    - hash -r
+    - conda config --set always_yes yes --set changeps1 no
+    - conda update -q conda
+    - conda info -a
+    - curl -O https://ssb.stsci.edu/releases/caldp/${HSTCAL}/latest-linux.yml
+    - conda env create -q -n caldp_${HSTCAL} --file latest-linux.yml
+    - conda activate caldp_${HSTCAL}
+    - pip install .[test,dev]
+    - caldp-install-fitscut
+    - source caldp-config-offsite
+
 script: tox
