--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ install:
     - conda update -q conda
     - conda info -a
     - curl -O https://ssb.stsci.edu/releases/caldp/${HSTCAL}/latest-linux.yml
+    - cat latest-linux.yml
     - conda env create -q -n caldp_${HSTCAL} --file latest-linux.yml
     - conda activate caldp_${HSTCAL}
     - pip install .[test,dev]
