--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
     - conda env create -q -n caldp_${HSTCAL} --file astroconda-releases/caldp/${HSTCAL}/latest-linux.yml
     - conda activate caldp_${HSTCAL}
     - pip install .[test,dev]
-    - caldp-install-fitscut
+    - caldp-install-fitscut  $HOME/miniconda/envs/caldp_${HSTCAL}
     - source caldp-config-offsite
 
 script: tox
