--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,8 @@ python_requires = >=3.6
 setup_requires = setuptools_scm
 install_requires =
     astropy
+    crds
+    drizzlepac
     boto3
 
 [options.extras_require]
