--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,14 @@
 sudo: false
 dist: bionic
 language: python
-python: 3.6
+python: 3.6.10
 matrix:
     include:
         - env: HSTCAL=stable
         - env: HSTCAL=latest
 
 install:
-    - curl -O https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
-    - bash Miniconda3-latest-Linux-x86_64.sh -b -p $HOME/miniconda
-    - source "$HOME/miniconda/etc/profile.d/conda.sh"
-    - hash -r
-    - conda config --set always_yes yes --set changeps1 no
-    - conda update -q conda
-    - conda info -a
-    - git clone https://github.com/astroconda/astroconda-releases
-    - conda env create -q -n caldp_${HSTCAL} --file astroconda-releases/caldp/${HSTCAL}/latest-linux.yml
-    - conda activate caldp_${HSTCAL}
-    - pip install .[test,dev]
-    - caldp-install-fitscut  $HOME/miniconda/envs/caldp_${HSTCAL}
+    - scripts/caldp-install-all  ${HSTCAL}
     - source caldp-config-offsite
 
 script: tox
