--- a/tox.ini
+++ b/tox.ini
@@ -14,15 +14,15 @@ isolated_build = true
 passenv = HOME WINDIR LC_ALL LC_CTYPE CC CI TRAVIS DISPLAY
 changedir = .tmp/{envname}
 
-[testenv:coverage]
-whitelist_externals = pytest
-commands =
-    pytest caldp --cov=caldp --cov-fail-under 95 --cov-report=term-missing
+; [testenv:coverage]
+; whitelist_externals = pytest
+; commands =
+;     pytest caldp --cov=caldp --cov-fail-under 95 --cov-report=term-missing
 
-[testenv:test]
-whitelist_externals = pytest
-commands =
-    pytest caldp
+; [testenv:test]
+; whitelist_externals = pytest
+; commands =
+;     pytest caldp
 
 [testenv:black]
 basepython = python3.7
