--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ env:
         - nref=${CRDS_PATH}/references/hst/nicmos/
         - uref=${CRDS_PATH}/references/hst/wfcpc2/
         - uref_linux=$uref
+        - DOCKER_REPO=jaytmiller/caldp
+        - DOCKER_TAG=stable
 
 jobs:
   # Don't wait for allowed failures
@@ -33,18 +35,35 @@ jobs:
             - scripts/caldp-install-all latest
       script:
             - source "$HOME/miniconda3/etc/profile.d/conda.sh"
-            - conda activate caldp_stable
+            - conda activate caldp_latest
             - pytest caldp --cov=caldp --cov-report=term-missing
 
+    - name: Docker image
+      services: docker
+      before_install:
+        - docker pull $DOCKER_IMAGE:$DOCKER_TAG
+      script:
+        - pip install caldp
+        - docker run $DOCKER_IMAGE:$DOCKER_TAG caldp-process-offsite   j8cb010b0
+        - docker run $DOCKER_IMAGE:$DOCKER_TAG caldp-process-offsite   octka6010
+        - docker run $DOCKER_IMAGE:$DOCKER_TAG caldp-process-offsite   ldqhpbi9q
+        - docker run $DOCKER_IMAGE:$DOCKER_TAG caldp-process-offsite   idgg23ztq
+
     - name: Black style checks
+      install:
+            - pip install black
       script:
             - black --check caldp caldp/tests
 
     - name: Flake8 python lint checks
+      install:
+            - pip install flake8
       script:
             - flake8 --count --max-line-length=120
 
     - name: Bandit security checks
+      install:
+            - pip install bandit
       script:
             - bandit -r caldp
 
