--- a/.travis.yml
+++ b/.travis.yml
@@ -44,10 +44,10 @@ jobs:
         - docker pull $DOCKER_IMAGE:$DOCKER_TAG
       script:
         - pip install caldp
-        - docker run $DOCKER_IMAGE:$DOCKER_TAG caldp-process  j8cb010b0  astroquery  file:.  caldp-config-offsite
-        - docker run $DOCKER_IMAGE:$DOCKER_TAG caldp-process  octka6010  astroquery  file:.  caldp-config-offsite
-        - docker run $DOCKER_IMAGE:$DOCKER_TAG caldp-process  ldqhpbi9q  astroquery  file:.  caldp-config-offsite
-        - docker run $DOCKER_IMAGE:$DOCKER_TAG caldp-process  idgg23ztq  astroquery  file:.  caldp-config-offsite
+        - docker run $DOCKER_REPO:$DOCKER_TAG caldp-process  j8cb010b0  astroquery  file:.  caldp-config-offsite
+        - docker run $DOCKER_REPO:$DOCKER_TAG caldp-process  octka6010  astroquery  file:.  caldp-config-offsite
+        - docker run $DOCKER_REPO:$DOCKER_TAG caldp-process  ldqhpbi9q  astroquery  file:.  caldp-config-offsite
+        - docker run $DOCKER_REPO:$DOCKER_TAG caldp-process  idgg23ztq  astroquery  file:.  caldp-config-offsite
 
     - name: Black style checks
       install:
@@ -66,4 +66,3 @@ jobs:
             - pip install bandit
       script:
             - bandit -r caldp
-
