--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Docker image
       services: docker
       before_install:
-        - docker pull $DOCKER_IMAGE:$DOCKER_TAG
+        - docker pull $DOCKER_REPO:$DOCKER_TAG
       script:
         - pip install caldp
         - docker run $DOCKER_REPO:$DOCKER_TAG caldp-process  j8cb010b0  astroquery  file:.  caldp-config-offsite
