--- a/.travis.yml
+++ b/.travis.yml
@@ -42,8 +42,9 @@ jobs:
       services: docker
       before_install:
         - docker pull $DOCKER_REPO:$DOCKER_TAG
+      install:
+        - pip install .[dev,test]
       script:
-        - pip install caldp
         - docker run $DOCKER_REPO:$DOCKER_TAG caldp-process  j8cb010b0  astroquery  file:.  caldp-config-offsite
         - docker run $DOCKER_REPO:$DOCKER_TAG caldp-process  octka6010  astroquery  file:.  caldp-config-offsite
         - docker run $DOCKER_REPO:$DOCKER_TAG caldp-process  ldqhpbi9q  astroquery  file:.  caldp-config-offsite
