--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,7 @@ jobs:
       install:
             - pip install flake8
       script:
-            - flake8 --count --max-line-length=120 --exclude docs setup.py
+            - flake8 --count --max-line-length=120 --exclude docs
 
     - name: Bandit security checks
       install:
