--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ jobs:
       install:
         - pip install .[dev,test]
       script:
-        - "docker run $DOCKER_REPO:$DOCKER_TAG  caldp-process  j8cb010b0  astroquery:  file:.  caldp-config-offsite"
+        - "docker run $DOCKER_REPO:$DOCKER_TAG  caldp-process  j8cb010b0  astroquery:  none  caldp-config-offsite"
 
     - name: Black style checks
       install:
