Switched after_success to after_script in travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ jobs:
         - pip install .[dev,test]
       script:
         - "docker run ${DOCKER_REPO}:${DOCKER_TAG}  caldp-process  j8cb010b0  astroquery:  none  caldp-config-offsite"
-      after_success:
+      after_script:
         - echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin
         - docker push ${DOCKER_REPO}:${DOCKER_TAG}
 
