--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ env:
         - uref_linux=$uref
         - DOCKER_REPO=jaytmiller/caldp
         - DOCKER_TAG=latest
+        - CAL_BASE_IMAGE=stsci/hst-pipeline:latest
 
 jobs:
   # Don't wait for allowed failures
@@ -42,7 +43,7 @@ jobs:
       services: docker
       before_install:
         # - docker pull $DOCKER_REPO:$DOCKER_TAG
-        - docker build -f Dockerfile  -t ${DOCKER_REPO}:${DOCKER_TAG}  .
+        - docker build -f Dockerfile  -t ${DOCKER_REPO}:${DOCKER_TAG}  --build-arg CAL_BASE_IMAGE=${CAL_BASE_IMAGE}.
       install:
         - pip install .[dev,test]
       script:
