--- a/.travis.yml
+++ b/.travis.yml
@@ -68,4 +68,4 @@ jobs:
       install:
             - pip install bandit
       script:
-            - bandit -r caldp
+            - bandit -ll -r caldp
