Added pytest --capture=tee-sys in .travis to show caldp functional test logs Added --cov-fail-under 85 to LATEST functional test to intentionally fail this time before revising it to whatever our current coverage is.

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ jobs:
       script:
             - source "$HOME/miniconda3/etc/profile.d/conda.sh"
             - conda activate caldp_stable
-            - pytest caldp --cov=caldp --cov-report=term-missing
+            - pytest caldp --cov=caldp --cov-report=term-missing --capture=tee-sys
 
     - name: Pytest native functional tests LATEST
       install:
@@ -37,7 +37,7 @@ jobs:
       script:
             - source "$HOME/miniconda3/etc/profile.d/conda.sh"
             - conda activate caldp_latest
-            - pytest caldp --cov=caldp --cov-report=term-missing  #   --cov-fail-under 95
+            - pytest caldp --cov=caldp --cov-report=term-missing  --capture=tee-sys  --cov-fail-under 85
 
     - name: Docker image build and single dataset
       services: docker
